# kata-gilded-rose

./: README.md  gilded_rose.py  gilded_rose_test.py  pyproject.toml  test.sh
